--- a/foto.html
+++ b/foto.html
@@ -106,7 +106,7 @@
     </figure>
     <figure>
         <img src="22(3novembre2024).jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-        <figcaption>1 Novembre 2024</figcaption>
+        <figcaption>3 Novembre 2024</figcaption>
     </figure>
     <figure>
         <img src="23(3novembre2024).jpg" alt="Pink and blue clouds at sunset. " title="Photo by Jeremy Doddridge for Unsplash">
@@ -127,7 +127,31 @@
     </figure>
     <figure>
         <img src="27(4novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
-        <figcaption>3 Novembre 2024</figcaption>
+        <figcaption>4 Novembre 2024</figcaption>
+    </figure>
+    <figure>
+        <img src="28(4novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <figcaption>4 Novembre 2024</figcaption>
+    </figure>
+    <figure>
+        <img src="29(4novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <figcaption>4 Novembre 2024</figcaption>
+    </figure>
+    <figure>
+        <img src="30(8novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <figcaption>8 Novembre 2024</figcaption>
+    </figure>
+    <figure>
+        <img src="31(9novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <figcaption>9 Novembre 2024</figcaption>
+    </figure>
+    <figure>
+        <img src="32(10novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <figcaption>10 Novembre 2024</figcaption>
+    </figure>
+    <figure>
+        <img src="33(10novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <figcaption>10 Novembre 2024</figcaption>
     </figure>
     </div>
 </main>
