--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             padding: 0;
             height: 100%;
             font-family: "Shantell Sans", serif;
-            background: url('24(3novembre2024) copy.jpg') no-repeat center center fixed; 
+            background: url('/foto/24\(3novembre2024\)\ copy.jpg ') no-repeat center center fixed; 
             background-size: cover; 
         }
 
