--- a/foto.html
+++ b/foto.html
@@ -19,194 +19,194 @@
             </div>
         </figure>
         <figure>
-            <img src="/foto/1(23ottobre2024).jpg" alt="Pink and blue clouds at sunset." title="Photo by Jeremy Doddridge for Unsplash">
+            <img src="/1(23ottobre2024).jpg" alt="Pink and blue clouds at sunset." title="Photo by Jeremy Doddridge for Unsplash">
             <figcaption>23 Ottobre 2024</figcaption>
         </figure>
     </figure>
     <figure>
-        <img src="/foto/2(23ottobre2024).jpg" alt="Low angle view up into a sky filled with deep blue clouds. " title="Photo by Matthew Brayer for Unsplash">
+        <img src="/2(23ottobre2024).jpg" alt="Low angle view up into a sky filled with deep blue clouds. " title="Photo by Matthew Brayer for Unsplash">
         <figcaption>23 Ottobre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/3(24ottobre2024).jpg" alt="Heavy gray clouds in the sky. " title="Photo by Simeon Muller for Unsplash">
+        <img src="3(24ottobre2024).jpg" alt="Heavy gray clouds in the sky. " title="Photo by Simeon Muller for Unsplash">
         <figcaption>24 Ottobre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/4(25ottobre2024).jpg" alt="Deep orange clouds at sunset. " title="Photo by Laura Vinck for Unsplash">
+        <img src="4(25ottobre2024).jpg" alt="Deep orange clouds at sunset. " title="Photo by Laura Vinck for Unsplash">
         <figcaption>25 Ottobre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/5(25ottobre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="5(25ottobre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>25 Ottobre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/6(26ottobre2024).jpg" alt="Clouds in shades of blue and gold at sunrise. " title="Photo by Łukasz Łada for Unsplash">
+        <img src="6(26ottobre2024).jpg" alt="Clouds in shades of blue and gold at sunrise. " title="Photo by Łukasz Łada for Unsplash">
         <figcaption>26 ottobre 2024</figcaption>
     </figure>
     <figure>
-        <img src='/foto/7(26ottobre2024).jpg' alt='clouds and sky during daytime' title="Photo by Diego PH for Unsplash">
+        <img src='7(26ottobre2024).jpg' alt='clouds and sky during daytime' title="Photo by Diego PH for Unsplash">
         <figcaption>26 ottobre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/8(27ottobre2024).jpg" alt="white clouds and blue sky. " title="Photo by Carlos Kenobi for Unsplash">
+        <img src="8(27ottobre2024).jpg" alt="white clouds and blue sky. " title="Photo by Carlos Kenobi for Unsplash">
         <figcaption>27 ottobre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/9(27ottobre2024).jpg" alt="cloudy sky. " title="Photo by Alex Machado for Unsplash">
+        <img src="9(27ottobre2024).jpg" alt="cloudy sky. " title="Photo by Alex Machado for Unsplash">
         <figcaption>27 ottobre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/10(28ottobre2024).jpg" alt="rainbow during daytime. " title="Photo by Yulia Gadalina for Unsplash">
+        <img src="10(28ottobre2024).jpg" alt="rainbow during daytime. " title="Photo by Yulia Gadalina for Unsplash">
         <figcaption>28 ottobre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/11(28ottobre2024).jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="11(28ottobre2024).jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>28 ottobre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/16(28ottobre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="16(28ottobre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>28 ottobre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/12(29ottobre2024).jpg" alt="Pink and blue clouds at sunset. " title="Photo by Jeremy Doddridge for Unsplash">
+        <img src="12(29ottobre2024).jpg" alt="Pink and blue clouds at sunset. " title="Photo by Jeremy Doddridge for Unsplash">
         <figcaption>29 ottobre 2024</figcaption>
         
     </figure>
     <figure>
-        <img src="/foto/13(30ottobre2024).jpg" alt="Low angle view up into a sky filled with deep blue clouds. " title="Photo by Matthew Brayer for Unsplash">
+        <img src="13(30ottobre2024).jpg" alt="Low angle view up into a sky filled with deep blue clouds. " title="Photo by Matthew Brayer for Unsplash">
         <figcaption>30 ottobre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/14(30ottobre2024).jpg" alt="Heavy gray clouds in the sky. " title="Photo by Simeon Muller for Unsplash">
+        <img src="14(30ottobre2024).jpg" alt="Heavy gray clouds in the sky. " title="Photo by Simeon Muller for Unsplash">
         <figcaption>30 ottobre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/15(30ottobre2024).jpg" alt="Deep orange clouds at sunset. " title="Photo by Laura Vinck for Unsplash">
+        <img src="15(30ottobre2024).jpg" alt="Deep orange clouds at sunset. " title="Photo by Laura Vinck for Unsplash">
         <figcaption>30 ottobre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/17(1novembre2024).jpg" alt="Clouds in shades of blue and gold at sunrise. " title="Photo by Łukasz Łada for Unsplash">
+        <img src="17(1novembre2024).jpg" alt="Clouds in shades of blue and gold at sunrise. " title="Photo by Łukasz Łada for Unsplash">
         <figcaption>1 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src='/foto/18(1novembre2024).jpg' alt='clouds and sky during daytime' title="Photo by Diego PH for Unsplash">
+        <img src='18(1novembre2024).jpg' alt='clouds and sky during daytime' title="Photo by Diego PH for Unsplash">
         <figcaption>1 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/19(3novembre2024).jpg" alt="white clouds and blue sky. " title="Photo by Carlos Kenobi for Unsplash">
+        <img src="19(3novembre2024).jpg" alt="white clouds and blue sky. " title="Photo by Carlos Kenobi for Unsplash">
         <figcaption>3 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/20(3novembre2024).jpg" alt="cloudy sky. " title="Photo by Alex Machado for Unsplash">
+        <img src="20(3novembre2024).jpg" alt="cloudy sky. " title="Photo by Alex Machado for Unsplash">
         <figcaption>3 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/21(3novembre2024).jpg" alt="rainbow during daytime. " title="Photo by Yulia Gadalina for Unsplash">
+        <img src="21(3novembre2024).jpg" alt="rainbow during daytime. " title="Photo by Yulia Gadalina for Unsplash">
         <figcaption>3 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/22(3novembre2024).jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="22(3novembre2024).jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>3 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/23(3novembre2024).jpg" alt="Pink and blue clouds at sunset. " title="Photo by Jeremy Doddridge for Unsplash">
+        <img src="23(3novembre2024).jpg" alt="Pink and blue clouds at sunset. " title="Photo by Jeremy Doddridge for Unsplash">
         <figcaption>3 Novembre 2024</figure>
         
     </figure>
     <figure>
-        <img src="/foto/24(3novembre2024).jpg" alt="Low angle view up into a sky filled with deep blue clouds. " title="Photo by Matthew Brayer for Unsplash">
+        <img src="24(3novembre2024).jpg" alt="Low angle view up into a sky filled with deep blue clouds. " title="Photo by Matthew Brayer for Unsplash">
         <figcaption>3 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/25(3novembre2024).jpg" alt="Heavy gray clouds in the sky. " title="Photo by Simeon Muller for Unsplash">
+        <img src="25(3novembre2024).jpg" alt="Heavy gray clouds in the sky. " title="Photo by Simeon Muller for Unsplash">
         <figcaption>3 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/26(3novembre2024).jpg" alt="Deep orange clouds at sunset. " title="Photo by Laura Vinck for Unsplash">
+        <img src="26(3novembre2024).jpg" alt="Deep orange clouds at sunset. " title="Photo by Laura Vinck for Unsplash">
         <figcaption>3 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/27(4novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="27(4novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>4 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/28(4novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="28(4novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>4 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/29(4novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="29(4novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>4 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/30(8novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="30(8novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>8 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/31(9novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="31(9novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>9 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/32(10novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="32(10novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>10 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/33(10novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="33(10novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>10 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/34(16novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="34(16novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>16 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/35(17novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="35(17novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>17 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/36(17novembre2024(5)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="36(17novembre2024(5)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>17 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/37(17novembre2024(6)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="37(17novembre2024(6)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>17 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/38(17novembre2024(4)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="38(17novembre2024(4)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>17 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/39(17novembre2024(2)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="39(17novembre2024(2)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>17 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/40(17novembre2024(3)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="40(17novembre2024(3)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>17 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/41(18novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="41(18novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>18 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/42(18novembre2024(1)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="42(18novembre2024(1)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>18 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/43(18novembre2024(2)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="43(18novembre2024(2)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>18 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/44(21novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="44(21novembre2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>21 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/45(21novembre2024(1)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="45(21novembre2024(1)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>21 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/46(23 novembre 2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="46(23 novembre 2024).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>23 Novembre 2024</figcaption>
     </figure>
     <figure>
-        <img src="/foto/47(23novembre2024 (1)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
+        <img src="47(23novembre2024 (1)).jpg" alt="Clouds in shades of dark blue and magenta at sunset. " title="Photo by Szabo Viktor for Unsplash">
         <figcaption>23 Novembre 2024</figcaption>
     </figure>
     </div>
