--- a/foto.html
+++ b/foto.html
@@ -19,12 +19,12 @@
             </div>
         </figure>
         <figure>
-            <img src="/1(23ottobre2024).jpg" alt="Pink and blue clouds at sunset." title="Photo by Jeremy Doddridge for Unsplash">
+            <img src="1(23ottobre2024).jpg" alt="Pink and blue clouds at sunset." title="Photo by Jeremy Doddridge for Unsplash">
             <figcaption>23 Ottobre 2024</figcaption>
         </figure>
     </figure>
     <figure>
-        <img src="/2(23ottobre2024).jpg" alt="Low angle view up into a sky filled with deep blue clouds. " title="Photo by Matthew Brayer for Unsplash">
+        <img src="2(23ottobre2024).jpg" alt="Low angle view up into a sky filled with deep blue clouds. " title="Photo by Matthew Brayer for Unsplash">
         <figcaption>23 Ottobre 2024</figcaption>
     </figure>
     <figure>
